--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "google-map-react": "^2.2.0",
+    "prop-types": "^15.8.1",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
