--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "google-map-react": "^2.2.0",
     "prop-types": "^15.8.1",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
